2002-08-18  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/paper.c: Removed app/preferences.h reference.

2002-08-14  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/svg/svg-import.c: 
	* plug-ins/xfig/xfig-import.c: 
	* lib/Makefile.am (libdia_a_SOURCES): 
	* objects/standard/Makefile.am (libstandard_objects_la_SOURCES): 
	* lib/create.h:
	* objects/standard/create.h:
	* objects/standard/polygon.c (polygon_create): 
	* objects/standard/polyline.c (polyline_create): 
	* objects/standard/beziergon.c (beziergon_create): 
	* objects/standard/bezier.c (bezierline_create): 
	Moving create.h into lib.

2002-08-13  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_libart.[ch]: Work on PNG font export.  Something's
	still fishy with the scaling, I don't get it.

	* app/display.c: 
	* app/interface.c: Replaced broken zoom combo with entry+menu.
	Now works beautifully.  Removed WITHOUT_ZOOM_COMBO stuff.

	* app/render_gdk.c (get_text_width): Checks for validity of text.
	Temporary help while debugging input -- should only activate on
	invalid input.

	* objects/SADT/annotation.c: 
	* objects/GRAFCET/transition.c: 
	* objects/FS/function.c: Removal of gtk.h include.

	* objects/UML/state.c (state_load): Warnings about using State
	object for initial/final states.

	* plug-ins/cgm/cgm.c (init_fonts): Proper Pango interfacing.

2002-08-12  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_eps.c: Text rendering that scales correctly.  Too bad
	the standard fonts don't get selected right.

2002-08-09  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/diagramdata.h: 
	* lib/paper.c (get_paper_info): 
	* lib/paper.h: 
	* plug-ins/xfig/xfig-import.c: 
	Committed before testing.  I am so embarrased.  This compiles, now
	that the includes are in the right order.
	
	* app/diagram.c (diagram_init): 
	* app/app_procs.c (do_convert): 
	* app/preferences.h: 
	* lib/diagramdata.h: 
	* lib/diagramdata.c (new_diagram_data): 
	* lib/paper.h: 
	* lib/paper.c (get_paper_info): 